empathy (2.34.0+git.20110429.1c68ea-0ubuntu0+easton1) natty; urgency=low

  * New upstream snapshot.

 -- Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>  Fri, 29 Apr 2011 16:01:08 +0100

empathy (2.34.0+git.20110427.ea8d26-0ubuntu0+easton1) natty; urgency=low

  * New upstream snapshot.
  * debian/patches/build_yell_statically.patch: removed.

 -- Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>  Wed, 27 Apr 2011 18:17:39 +0100

empathy (2.34.0+git.20110425.93f10e-0ubuntu0+easton1) natty; urgency=low

  * New upstream snapshot.
  * debian/patches/build_yell_statically.patch: added.

 -- Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>  Mon, 25 Apr 2011 23:40:41 +0100

empathy (2.34.0+git.20110415.26f679-0ubuntu0+easton1) natty; urgency=low

  * New upstream snapshot.

 -- Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>  Fri, 15 Apr 2011 17:28:02 +0100

empathy (2.34.0+git.20110408.14c784-0ubuntu0+easton1) natty; urgency=low

  * New upstream snapshot.
  * debian/rules: fix typo.

 -- Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>  Fri, 08 Apr 2011 15:29:23 +0100

empathy (2.34.0+git.20110324.d8e4f2-0ubuntu0+easton1) natty; urgency=low

  * New upstream release.

 -- Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>  Thu, 24 Mar 2011 16:16:11 +0000

empathy (2.33.4+git.20110323.2fa120-0ubuntu0+easton1) natty; urgency=low

  * New upstream snapshot.
    + debian/patches/*:
      - Refreshed.

 -- Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>  Wed, 23 Mar 2011 18:37:02 +0000

empathy (2.33.4+git.20110322.4c31c2-0ubuntu0+easton1) natty; urgency=low

  * New upstream snapshot.
    + debian/patches/23_idomessagedialog_for_voip_and_ft.patch
      debian/patches/40_unity_launcher_count.patch:
      - Refreshed.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Tue, 22 Mar 2011 20:57:16 +0000

empathy (2.33.4+git.20110318.9d0904-0ubuntu0+easton1) natty; urgency=low

  * New upstream snapshot.