@@ -1,7 +1,7 @@
 === modified file 'configure.ac'
 --- a/configure.ac
 +++ b/configure.ac
-@@ -161,6 +161,7 @@
+@@ -164,6 +164,7 @@
     telepathy-glib >= $TELEPATHY_GLIB_REQUIRED
     telepathy-logger-0.2 >= $TELEPATHY_LOGGER
     x11
@@ -21,7 +21,7 @@
  #include <telepathy-glib/telepathy-glib.h>
  
  #include <libempathy/empathy-contact.h>
-@@ -2090,6 +2093,9 @@
+@@ -2144,6 +2147,9 @@
  	chat_window_chat_manager_chats_changed_cb (priv->chat_manager,
  						   empathy_chat_manager_get_num_chats (priv->chat_manager),
  						   window);
@@ -53,7 +53,7 @@
  #include <libempathy/empathy-contact.h>
  #include <libempathy/empathy-idle.h>
  #include <libempathy/empathy-utils.h>
-@@ -2112,6 +2115,8 @@
+@@ -2441,6 +2444,8 @@
  	main_window_notify_contact_list_size_cb (priv->gsettings_ui,
  						 EMPATHY_PREFS_UI_SHOW_AVATARS,
  						 window);
@@ -64,7 +64,7 @@
  GtkWidget *
 --- a/src/empathy-main-window.ui
 +++ b/src/empathy-main-window.ui
-@@ -277,6 +277,7 @@
+@@ -287,6 +287,7 @@
          <menu action="help">
            <menuitem action="help_contents"/>
            <menuitem action="help_debug"/>
