@@ -3,7 +3,7 @@
 ## Bug: bug URL
 --- a/data/org.gnome.Empathy.gschema.xml.in
 +++ b/data/org.gnome.Empathy.gschema.xml.in
-@@ -153,7 +153,7 @@
+@@ -158,7 +158,7 @@
        <_description>Whether to show popup notifications when away or busy.</_description>
      </key>
      <key name="notifications-focus" type="b">
