@@ -10,7 +10,7 @@
  
  # telepathy-yell
  prev_top_build_prefix=$ac_top_build_prefix
-@@ -480,6 +482,34 @@
+@@ -498,6 +500,34 @@
  AC_SUBST(MEEGO_LIBS)
  
  # -----------------------------------------------------------
@@ -45,7 +45,7 @@
  # nautilus-sendto
  # -----------------------------------------------------------
  AC_ARG_ENABLE(nautilus-sendto,
-@@ -581,6 +611,7 @@
+@@ -599,6 +629,7 @@
  	CA Cert Path................:  ${GTLS_SYSTEM_CA_FILE}
  
      Features:
@@ -55,7 +55,7 @@
  	Location awareness (Geoclue):  ${have_geoclue}
 --- a/data/org.gnome.Empathy.gschema.xml.in
 +++ b/data/org.gnome.Empathy.gschema.xml.in
-@@ -86,6 +86,11 @@
+@@ -91,6 +91,11 @@
        <_summary>The position for the chat window side pane</_summary>
        <_description>The stored position (in pixels) of the chat window side pane.</_description>
      </key>
@@ -133,7 +133,7 @@
  
 --- a/po/POTFILES.in
 +++ b/po/POTFILES.in
-@@ -97,6 +97,8 @@
+@@ -98,6 +98,8 @@
  [type: gettext/glade]src/empathy-ft-manager.ui
  src/empathy-import-dialog.c
  src/empathy-import-widget.c
@@ -222,7 +222,7 @@
  	GtkTargetList *contact_targets;
  	GtkTargetList *file_targets;
  
-@@ -1278,6 +1287,72 @@
+@@ -1330,6 +1339,72 @@
  	}
  }
  
@@ -295,7 +295,7 @@
  static void
  chat_window_show_or_update_notification (EmpathyChatWindow *window,
  					 EmpathyMessage *message,
-@@ -1454,6 +1529,9 @@
+@@ -1508,6 +1583,9 @@
  
  		empathy_sound_play (GTK_WIDGET (priv->dialog),
  		    EMPATHY_SOUND_MESSAGE_INCOMING);
@@ -305,7 +305,7 @@
  
  		/* Pending messages have already been displayed in the approver, so we don't
  		* display a notification for those. */
-@@ -1526,6 +1604,10 @@
+@@ -1580,6 +1658,10 @@
  	empathy_chat_messages_read (chat);
  
  	chat_window_update_chat_tab (chat);
@@ -316,7 +316,7 @@
  }
  
  static void
-@@ -1642,6 +1724,11 @@
+@@ -1696,6 +1778,11 @@
  	/* Update the title, since we now mark all unread messages as read. */
  	chat_window_update_chat_tab_full (priv->current_chat, FALSE);
  
@@ -328,7 +328,7 @@
  	return FALSE;
  }
  
-@@ -1986,6 +2073,11 @@
+@@ -2040,6 +2127,11 @@
  	g_object_unref (gui);
  
  	priv->chatroom_manager = empathy_chatroom_manager_dup_singleton (NULL);
@@ -1299,7 +1299,7 @@
  #define DEBUG_FLAG EMPATHY_DEBUG_OTHER
  #include <libempathy/empathy-debug.h>
  
-@@ -161,6 +165,10 @@
+@@ -165,6 +169,10 @@
  
  	/* Actions that are enabled when there are connected accounts */
  	GList                  *actions_connected;
@@ -1310,7 +1310,7 @@
  
  	/* The idle event source to migrate butterfly's logs */
  	guint butterfly_log_migration_members_changed_id;
-@@ -433,11 +441,23 @@
+@@ -437,11 +445,23 @@
  			    EmpathyEvent        *event,
  			    EmpathyMainWindow   *window)
  {
@@ -1334,7 +1334,7 @@
  }
  
  static void
-@@ -1004,6 +1024,10 @@
+@@ -1321,6 +1341,10 @@
  	g_object_unref (priv->ui_manager);
  	g_object_unref (priv->chatroom_manager);
  
@@ -1345,7 +1345,7 @@
  	g_object_unref (priv->gsettings_ui);
  	g_object_unref (priv->gsettings_contacts);
  
-@@ -2072,6 +2096,10 @@
+@@ -2401,6 +2425,10 @@
  		l = l->next;
  	}
  
