@@ -64,7 +64,7 @@ Bug: https://bugs.launchpad.net/bugs/442389
  
  #include <libido/idomessagedialog.h>
  #include <libempathy-gtk/empathy-ui-utils.h>
-@@ -513,7 +514,7 @@
+@@ -514,7 +515,7 @@
  
    if (event->approval->dialog != NULL)
      {
