@@ -1,6 +1,8 @@
 empathy (2.34.0+git.20110429.1c68ea-0ubuntu0+easton1) natty; urgency=low
 
   * New upstream snapshot.
+    + debian/patches/*:
+      - Refreshed.
 
  -- Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>  Fri, 29 Apr 2011 16:01:08 +0100
 
